# cionc-old

./: .gitignore  CMakeLists.txt  README.md  cion.lang  compile_output_wtf  debug_output  debug_output.sh  main  todo
include/ast/: all.hpp  assignment_expression.hpp  binary_assign_expr.hpp  binary_expr.hpp  binary_expression.hpp  boolean_expr.hpp  boolean_literal.hpp  break_statement.hpp  break_stmnt.hpp  builtin_type.hpp  call_expr.hpp  call_expression.hpp  char_expr.hpp  decl.hpp  (+56 more)
src/: CMakeLists.txt  main.cpp
src/ast/: assignment_expression.cpp  binary_assign_expr.cpp  binary_expr.cpp  binary_expression.cpp  boolean_expr.cpp  boolean_literal.cpp  break_statement.cpp  break_stmnt.cpp  builtin_type.cpp  call_expr.cpp  call_expression.cpp  char_expr.cpp  char_literal.cpp  compilation_unit.cpp  compilation_unit_decl.cpp  compound_statement.cpp  compound_stmnt.cpp  conditional_expr.cpp  conditional_expression.cpp  continue_statement.cpp  continue_stmnt.cpp  decl_stmnt.cpp  empty_statement.cpp  empty_stmnt.cpp  expr.cpp  expr_stmnt.cpp  expression_list.cpp  expression_statement.cpp  float_expr.cpp  float_literal.cpp  function_decl.cpp  function_definition_statement.cpp  if_statement.cpp  if_stmnt.cpp  index_expr.cpp  index_expression.cpp  integer_expr.cpp  integer_literal.cpp  logical_parameter.cpp  logical_parameter_pack.cpp  (+21 more)
src/error/: ambiguous_token_read.cpp  cion_error_handler.cpp  cion_error_types.cpp  cion_exception.cpp  cion_warning_types.cpp  debug_info_type.cpp  error_handler.cpp  error_token_read.cpp  error_type.cpp  error_types.cpp  lexer_error.cpp  parser_error.cpp  report_type.cpp  source_location.cpp  warning_type.cpp
src/lexer/: cion_lexer.cpp  lexer.cpp  lexer_filter.cpp
src/parser/: basic_ast_visitor.cpp  calling_traverser.cpp  cion_parser.cpp  compiler_pass.cpp  parser.cpp  pre_post_traverser.cpp  print_ast_pass.cpp  recursive_traverser.cpp  write_ast_pass.cpp
src/token/: bool_token.cpp  char_token.cpp  cion_token_types.cpp  float_token.cpp  integer_token.cpp  integral_token.cpp  number_token.cpp  string_token.cpp  token.cpp  token_fabric.cpp  token_type.cpp  token_types.cpp
test/: hello_world.cion  input.cion  input_02.cion  input_03.cion  input_04.cion  input_05.cion  read_test.cion
zz_old/: Makefile  cion_token_types.cpp  cion_token_types.hpp  makefile
(+113 files in other folders)
